CustomRenderer and effects

--- a/DependencyServiceSample/DependencyServiceSample/Views/MainPage.xaml
+++ b/DependencyServiceSample/DependencyServiceSample/Views/MainPage.xaml
@@ -1,16 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="DependencyServiceSample.MainPage">
+<ContentPage
+    x:Class="DependencyServiceSample.MainPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Effects="clr-namespace:DependencyServiceSample.Controls"
+    xmlns:android="clr-namespace:DependencyServiceSample"
+    xmlns:controls="clr-namespace:DependencyServiceSample.Controls"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:local="clr-namespace:DependencyServiceSample"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+    <StackLayout VerticalOptions="CenterAndExpand">
+        <Label HorizontalOptions="Center" Text="Entry Customized!" />
+        <controls:MyEntry BackgroundColor="Red" />
+        <Entry>
+            <Entry.Effects>
+                <controls:Focus />
+            </Entry.Effects>
+        </Entry>
     </StackLayout>
 
 </ContentPage>
